crates/alien-permissions/tests/snapshots/azure_runtime__azure_role_assignment_resource_binding.snap
---
source: crates/alien-permissions/tests/azure_runtime.rs
expression: result
---
{
  "properties": {
    "roleDefinitionId": "/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.Authorization/roleDefinitions/${roleDefinitionGuid}",
    "principalId": "11111111-2222-3333-4444-555555555555",
    "scope": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-observability-prod/providers/Microsoft.Storage/storageAccounts/stcxpaymentsprod"
  }
}
