crates/alien-permissions/tests/snapshots/azure_runtime__azure_role_definition_stack_binding.snap
---
source: crates/alien-permissions/tests/azure_runtime.rs
expression: result
---
{
  "Name": "Storage Data Read",
  "IsCustom": true,
  "Description": "Allows reading data from storage resources",
  "Actions": [
    "Microsoft.Storage/storageAccounts/blobServices/containers/blobs/read"
  ],
  "NotActions": [],
  "DataActions": [
    "Microsoft.Storage/storageAccounts/blobServices/containers/blobs/read"
  ],
  "NotDataActions": [],
  "AssignableScopes": [
    "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/rg-observability-prod"
  ]
}
